[build-system]
requires = [
    "setuptools>=75",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerwallet"
authors = [
    {name = "Ledger", email = "hello@ledger.fr" }
]
description = "Library to communicate between the Ledger devices (Nano S/S+/X, Stax, Flex, Apex P and Apex M) and Speculos"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "click >=8.0",
    "construct >=2.10",
    "cryptography >=2.5",
    "ecdsa",
    "hidapi",
    "intelhex",
    "Pillow",
    "protobuf >=5.28,<6",
    "requests",
    "tabulate",
    "toml",
]

[project.urls]
Home = "https://github.com/LedgerHQ/ledgerctl"

[project.scripts]
ledgerctl = "ledgerwallet.ledgerctl:cli"

[tool.setuptools_scm]
write_to = "ledgerwallet/__version__.py"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"

[tool.black]
preview = true

[tool.bandit]
skips = ["B101"]
